XNATX-501: removed default 'Select' option from Spawner-generated menus; fixed an error with getting length of an undefined value; utility style classes: center/centered, align-left/text-left, align-right/text-right, nowrap/no-wrap; added 'sprite.png' file back to YUI folder - some YUI widgets still need it.

--- a/src/main/webapp/style/app.css
+++ b/src/main/webapp/style/app.css
@@ -705,6 +705,26 @@ table.ruled tr:nth-child(2n+1) {
     font-family: Courier, monospace;
 }
 
+.center,
+.centered {
+    text-align: center;
+}
+
+.align-left,
+.text-left {
+    text-align: left;
+}
+
+.align-right,
+.text-right {
+    text-align: right;
+}
+
+.nowrap,
+.no-wrap {
+    white-space: nowrap;
+}
+
 textarea.full {
     width: 100%; height: 100%;
     position: absolute;
